--- a/Dashbord/index.html
+++ b/Dashbord/index.html
@@ -16,13 +16,13 @@
   <div class="body">
     <!-- navbar -->
     <nav class="navbar">
-      <a class="navbar-brand" style="font-size: 35px; font-weight: bold;" href="#">DREAM</a>
+      <a class="navbar-brand" style="font-size: 35px; font-weight: bold;" href="../index.html">DREAM</a>
       <div class="searchArea">
         <input type="text" class="inputtextsearch" placeholder="search here">
         <input type="button" class="search" value="Search">
       </div>
       <div class="alagchezen">
-        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link active" href="../Dashbord/index.html">Home</a>
         <a class="nav-link active" href="../Profile/index.html">My Profile</a>
         <a class="nav-link dropdown-toggle navbarScrollingDropdowntag">
           <i class="fa-solid fa-caret-down"></i>
@@ -30,7 +30,7 @@
 
           <div class="dropdownkeclickperanewalelist">
             <a class="dropdown-item none logoutbtn">Logout</a>
-            <a class="dropdown-item none">ABOUT</a>
+            <a href="../All Users/index.html" class="dropdown-item none">All users</a>
             <a class="dropdown-item none">SHORTS</a>
             <a href="../editprofile/index.html" class="dropdown-item none">Edit Profile</a>
           </div>
